<resources>
    <string name="app_name">Family plan</string>
    <string name="f1">Birth control over view</string>
    <string name="start">Get Started</string>
    <string name="f2">What is family planning? \n\n What is contraception? \n\n Why is birth control important? \n\n I am married why is family planning important for me?</string>
    <string name="q1">What birth control is best?</string>
    <string name="q2">What is most important to you?</string>
    <string name="q3">How well it prevents pregnancy.</string>
    <string name="q4">How comfortable and how easy it is to use.</string>
    <string name="q6">If your partner is willing to use family planning, or if you must keep its use hidden.</string>
    <string name="q7">If it is easy to get and how frequently you must use it.</string>
    <string name="q2_1">There are several general types of contraception (outlined below), and often different kinds within each category. What they all have in common is that they prevent pregnancy, which means you can plan your life instead of leaving pregnancy and its responsibilities up to chance. Especially after an unplanned pregnancy, birth control can give you more control over your life.</string>
    <string name="q2_2">How they differ is in how much attention and action using them demands from you, the sorts of side effects they bring, and how effective they are, and when they can be started.</string>
    <string name="q2_3">Remember that side effects are different for each person, so a method that may be fine for your sister may be very uncomfortable for you. Also, effectiveness of contraception depends on using the methods correctly and consistently, and some are easier to use than others.</string>
    <string name="q2_4">Your life circumstances, your body, and your likes and dislikes will determine which method is best for you. Nobody but you can decide that, and learning about the different methods can help you make an informed decision.</string>
    <string name="q8">How much it costs.</string>
    <string name="mas">We Hope that we could Help you while use our App</string>
    <string name="q2_">General info about contraceptives</string>
    <string name="q9">If it has side effects.</string>
    <string name="ve">the contraceptive vaginal ring is a flexible, soft, transparent ring that is inserted by the user for a 3-week period of continuous use followed by a ring-free week to allow menses.</string>
    <string name="ve2">▪ The ring is compressed and inserted into the vagina, behind the pubic bone. \n ▪ The vaginal ring is left in place for 3 weeks, then removed and discarded.\n ▪ The vaginal ring is not recommended for women with uterine prolapsed or lack of vaginal muscle tone.</string>
    <string name="p4">The Method Chooser keeps your answers confidential — no one can find out how you have answered any of these questions.</string>
    <string name="p1">The Method Chooser is a series of questions for you to answer about your experiences, your likes and dislikes, what you are comfortable doing to make your contraception work, and your health history. Based on your answers, it will recommend what might be your best options for birth control. (In this app, birth control, family planning, and contraception are all mean the same thing.) You can then learn more about each of these methods in the main section of the app, How each method works. And you can then talk with a trusted health worker about getting the contraception method you want.</string>
    <string name="p2">There may be a lot of questions to answer, especially if you have tried several contraception methods in the past, or if you have health conditions which affect the type of contraceptives recommended for you. We encourage you to answer all of the questions, as this will improve the recommendations you receive.</string>
    <string name="p3">Because condoms are the only method that prevents STIs, including HIV, they will almost always be one of the recommendations of the Method Chooser. While you have to consider all the different factors that will help you use birth control consistently and correctly, the option of condoms is almost always a good one. Think carefully about your risk for getting an STI before deciding that condoms are not for you.</string>
    <string name="q10">If it can be started right away after childbirth, or after a miscarriage or abortion.</string>
    <string name="d2">You might have other needs and concerns. For example: Will you be able to keep it private? If you have to go to a clinic regularly to get it, will the people there treat you respectfully? Are you breastfeeding? Do you have all the children you want? Do you never want children? Nobody knows what you want better than you.</string>
    <string name="q5">How well it protects against STIs (Condoms are the only family planning method that also protects against STIs including HIV).</string>
    <string name="des">There are a lot of different methods you can use to prevent pregnancy. No one method is best for everyone and you should be free to choose the method you want. The best method for you is one that works and that you are most comfortable using.</string>
    <string name="Home_disc">Family planning is having the number of children you want, when you want them. This app explains the many safe, effective methods to prevent pregnancy. It includes a Method Chooser to help you determine which method is right for you or the person you are counseling. A section on Counseling can help you improve your skills. \n The right to decide when to get pregnant and when to prevent pregnancy is central to our right to health. People are healthier when they can decide for themselves when to have sex, and if and when to have children. Access to contraception enables us to make those decisions</string>
    <string name="methods_chooser_questionnaire">Methods chooser questionnaire</string>
    <string name="methods">What  is most important to you when choosing a birth control method ?!</string>
    <string name="select_3_things">Select 3 things most important to you !</string>
    <string name="m1">Able to get pregnant quickly after stopping the method</string>
    <string name="m2">Can be kept secret from others (my parents or partner)</string>
    <string name="m3">Continue to have monthly periods</string>
    <string name="m4">Decrease symptoms from period</string>
    <string name="m5">Have fewer or no periods</string>
    <string name="m6">Don\'t need to interrupt sex to use it</string>
    <string name="m7">Few or no side-effects</string>
    <string name="m8">No hormones</string>
    <string name="m9">Prevents pregnancy for 1 year or longer</string>
    <string name="m10">Safe during breastfeeding</string>
    <string name="m12">Very effective at preventing pregnancy</string>
    <string name="pill">Pill</string>
    <string name="combined_bill">Combined Pill (combines estrogen and progestin):</string>
    <string name="pill_1">Pills that contain the hormones estrogen and progestin. Estrogen and progesterone suppress FSH and LH production, so ovarian follicles do not mature and ovulation is inhibited. Take one pill everyday around the same time.</string>
    <string name="mini1">Mini Pills (progestin only):</string>
    <string name="mini2">Pills that act in the same manner as the combination pills but contain only progestin. Progesterone cause thickening of the cervical mucus making penetration by spermatozoa is difficult.</string>
    <string name="mini3">Complications of Birth Control Pills.</string>
    <string name="eye_problem">Eye problem</string>
    <string name="headache">Headache</string>
    <string name="chest_pain">Chest pain</string>
    <string name="abdominal_pain">Abdominal pain</string>
    <string name="leg_pain">Leg pain</string>
    <string name="instruction">Instruction for Oral Contraceptive:</string>
    <string name="instr1">The pills are started in 5th day of the cycle for 21 days continuously.</string>
    <string name="instr2">It is taken preferably at night and after meal.</string>
    <string name="instr3">If you have missed 1 pill, you should take the last pill you missed now, even if this means taking 2 pills in 1 day. Carry on taking the rest of the pack as normal.</string>
    <string name="instr4">If 2 pills are missing they are given in the next 2 days one in each day.</string>
    <string name="pil">Pill</string>
    <string name="injection">Injection Contraceptive</string>
    <string name="injection_1">Contain progestin hormone to prevent pregnancy given every 3 months.</string>
    <string name="implantable_contraceptives">Implantable Contraceptives</string>
    <string name="implant">A single-rod progestin implant (Implanon) sub dermal used for 3-5 years.</string>
    <string name="trans_dermal_patch">Trans- dermal Patch</string>
    <string name="patch">Patch is placed on the abdomen, arm, or buttock. It needs to be changed every week. It contains the same active components as birth control pills but is absorbed through the skin.</string>
    <string name="hormonal">Hormonal IUD</string>
    <string name="advantages">Advantages of hormonal contraceptives:</string>
    <string name="highly_effective">Highly effective.</string>
    <string name="menstrual_cycle_regulation">Menstrual cycle regulation.</string>
    <string name="less_severe_menstrual_cramps">Less severe menstrual cramps.</string>
    <string name="decreased_risk_of_iron_deficiency_anemia">Decreased risk of iron deficiency (anemia).</string>
    <string name="protection_against_pelvic_inflammatory_disease">Protection against pelvic inflammatory disease.</string>
    <string name="disadvantages_of_hormonal_contraceptives">Disadvantages of hormonal contraceptives:</string>
    <string name="heart_attack">Heart attack.</string>
    <string name="increased_blood_pressure">increased Blood pressure.</string>
    <string name="headaches">Headaches.</string>
    <string name="nausea_and_vomiting">Nausea and vomiting .</string>
    <string name="breakthrough_bleeding_or_spotting">Breakthrough bleeding or spotting.</string>
    <string name="decreased_enjoyment_of_sex">Decreased enjoyment of sex.</string>
    <string name="weight_gain">Weight gain .</string>
    <string name="barrier_methods_of_family_planning">Barrier Methods of family planning</string>
    <string name="vaginal_diaphragm_or_cap">Vaginal Diaphragm or cap:</string>
    <string name="dome_shaped">It is a dome shaped rubber cup with a firm ring that covers the cervix.</string>
    <string name="how_does_the_vaginal_diaphragm_work">How does the vaginal diaphragm work?</string>
    <string name="diaphragms">Diaphragms cover your cervix, which is the opening between your vagina and uterus. They create a barrier separating sperm ejaculated into your vagina during intercourse and your uterus. Vaginal diaphragms are used with spermicide. Spermicides are available as a foam, cream, gel, or suppository that you can apply to your diaphragm. Spermicide immobilizes sperm so they don’t reach your uterus.</string>
    <string name="you_can_put">•\tYou can put in a diaphragm or cap with spermicide any time before you have sex.</string>
    <string name="the_diaphragm">•\tThe diaphragm or cap needs to be left in place for at least 6 hours after sex.</string>
    <string name="male_condom">Male Condom</string>
    <string name="male1">A condom is a fine barrier which is rolled on to a man’s penis before sex. It is used as a barrier to stop sperm and infection passing between sexual partners. It is usually made of rubber.</string>
    <string name="instruction_for_usage_of_diagram_and_sponge">Instruction for usage of Diagram and Sponge:</string>
    <string name="always">• Always empty the bladder prior to inserting it.</string>
</resources>